Sun Oct  4 15:11:48 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/euc_jp.c (mbc_case_fold): check given string is valid or not,
	  and if invalid, return 1. [Bug #11486]

Sun Oct  4 10:09:57 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (rb_dir_getwd): normalize OS path to UTF-8 on OS X.

Sun Oct  4 00:09:45 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/ruby-runner.c.in: wrapper to set dynamic loading path
	  environment variable.  /bin/sh on Mac OS X 10.11 (El Capitan)
	  clears DYLD_LIBRARY_PATH.

	  it must:
	  - do nothing even if current directory is not present
	  - do not set other environment variables, e.g. PWD, SHLVL, etc
	  - do not open other FDs, e.g. pipes for timer thread

Sun Oct 2 10:59:00 2015  schneems  <richard.schneeman@gmail.com>

	* ext/pathname/lib/pathname.rb: freeze string literals for
	  reduced object allocation.
	  [Feature #11375] [ruby-core:70043]

Fri Oct  2 09:20:20 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* common.mk, lib/unicode_normalize/tables.rb: Change Unicode
	  Version for character normalization data from 7.0.0 to
	  8.0.0.

Fri Oct  2 00:18:39 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (proc_mark): block.ep of Proc from Symbol is now NULL.
	  [ruby-core:70961] [Bug #11560]

Wed Sep 30 15:47:13 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_args.c (vm_caller_setup_arg_block): bypass Symbol#to_proc
	  call to optimize symbol block passing.

Wed Sep 30 01:34:34 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_free): fix memory leak at syntax error when
	  warn-indent is enabled.

Tue Sep 29 22:27:50 2015  Benoit Daloze  <eregontp@gmail.com>

	* parse.y: fix minor typo. [ci skip][fix GH-1038].
	  Patch by @ltratt.

Tue Sep 29 16:53:53 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* tool/unicode_norm_gen.tmpl, lib/unicode_normalize/tables.rb:
	  get rid of many .freeze commands by using frozen_string_literal
	  pragma.
